@@ -2,6 +2,16 @@
 
         Reviewed by Adam.
 
+        Return E_INVALIDARG if the databaseName BSTR is null;
+        
+        * WebDatabaseManager.cpp:
+        (WebDatabaseManager::detailsForDatabaseWithOrigin):
+        (WebDatabaseManager::deleteDatabaseWithOrigin):
+
+2007-11-27  Anders Carlsson  <andersca@apple.com>
+
+        Reviewed by Adam.
+
         Implement the rest of the WebDatabaseManager API.
 
         * COMEnumVariant.h:
